feat(#23): save progress
