# apps/auth-backend/src/main/java/org/tiltus/authbackend/rest/FriendRestController.java
@@ -5,6 +5,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 import org.tiltus.authbackend.rest.requests.SendFriendRequest;
+import org.tiltus.authbackend.rest.response.FriendRequestResponse;
 import org.tiltus.authbackend.rest.response.FriendResponse;
 import org.tiltus.authbackend.services.CaroFriendshipService;
 
@@ -38,6 +39,16 @@ public class FriendRestController {
         return ResponseEntity.ok().build();
     }
 
+    @PostMapping("/requests/{id}/decline")
+    public ResponseEntity<Void> declineFriendRequest(
+            @AuthenticationPrincipal String userId,
+            @PathVariable("id") UUID friendshipId
+    ) {
+        UUID currentUserId = UUID.fromString(userId);
+        friendshipService.declineRequest(currentUserId, friendshipId);
+        return ResponseEntity.ok().build();
+    }
+
     @DeleteMapping("/{friendId}")
     public ResponseEntity<Void> unfriend(
             @AuthenticationPrincipal String userId,
@@ -55,5 +66,23 @@ public class FriendRestController {
         UUID currentUserId = UUID.fromString(userId);
         var friends = friendshipService.getFriends(currentUserId);
         return ResponseEntity.ok(friends);
+    }
+
+    @GetMapping("/requests/outgoing")
+    public ResponseEntity<List<FriendRequestResponse>> getOutgoingRequests(
+            @AuthenticationPrincipal String userId
+    ) {
+        UUID currentUserId = UUID.fromString(userId);
+        var requests = friendshipService.getOutgoingRequests(currentUserId);
+        return ResponseEntity.ok(requests);
+    }
+
+    @GetMapping("/requests/incoming")
+    public ResponseEntity<List<FriendRequestResponse>> getIncomingRequests(
+            @AuthenticationPrincipal String userId
+    ) {
+        UUID currentUserId = UUID.fromString(userId);
+        var requests = friendshipService.getIncomingRequests(currentUserId);
+        return ResponseEntity.ok(requests);
     }
 }
